# AgroSure

./: .gitignore  README.md
RAG/: config.json  output.txt  pyproject.toml  rag.py  rag_updated.py
backend/: .dockerignore  app.js  config-banks.js  config.js  dockerfile  package-lock.json  package.json  server.js
backend/controllers/: crop.controller.js  insurance.controller.js  loan.controller.js  user.controller.js
backend/middlewares/: upload.middleware.js
backend/models/: bank.schema.js  crop.schema.js  insurance.model.js  loan.schema.js  user.schema.js
backend/routes/: crop.route.js  insurance.route.js  loan.route.js  user.route.js
backend/services/: getAIInsights.service.js  sendNotification.service.js
backend/utils/: createPDF.util.js  handleFileUpload.util.js
frontend/: .dockerignore  dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthDialog.jsx  DirectGoogleTranslate.jsx  FarmerDashboard.jsx  YieldPredictionForm.jsx  YieldResult.jsx  insuranceClaim.jsx  insuranceSummary.jsx  kisaanSaathi.jsx  loanApplication.jsx  pastRecords.jsx
frontend/src/pages/: Landing.jsx  index.jsx
kisan-saathi-service/: .dockerignore  app.py  config.py  dockerfile  pyproject.toml
kisan-saathi-service/controllers/: api_controller.py
kisan-saathi-service/models/: rag_model.py
kisan-saathi-service/utils/: logger.py
python_backend/: RAG.py  SETUP.md  engine.py  futureWeather.py  main.py  main_fastAPI.py  main_secured.py  pyproject.toml  requirements.txt  setup.bat  test.py  test.txt
