[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "sentence-transformers",
    "scikit-learn",
    "transformers",
    "flask",
    "flask-cors",
    "datasets",
    "torch",
    "torchvision",
    "torchaudio"
]
