[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "cupy-cuda102>=12.3.0",
    "flask==2.2.5",
    "geopy==2.4.1",
    "google-generativeai>=0.8.5",
    "numpy==1.24.3",
    "ollama>=0.5.1",
    "opencv-python==4.8.0.76",
    "pandas",
    "piexif==1.1.3",
    "pillow==9.5.0",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "timm==0.9.2",
    "torch==2.0.1",
]
